--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="iNotes - Your personal note-taking app with Auth0 authentication" />
+    <title>iNotes - Smart Note Taking App</title>
   </head>
   <body>
     <div id="root"></div>
